--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Speed Test by OpenSpeedTest.com</title>
+  <title>Speed Test by OpenSpeedTest</title>
   <meta name="description"
     content="Test your network speed now. HTML5 Network Performance Estimation Tool. Self-Hosted SpeedTest by OpenSpeedTest™"/>
   <link href="assets/css/app.css" rel="stylesheet" type="text/css" />
